[BUGFIX] Remove unnecessary scrollbar on nav

--- a/stylesheets/application.scss
+++ b/stylesheets/application.scss
@@ -49,7 +49,6 @@ body{
 /* NAV BAR STYLING */
 nav{
   background:transparent;
-  height:60px;
   line-height:60px;
   width:100%;
   color:#e45036;
@@ -254,7 +253,7 @@ section li {
       border-radius: 0px;
       width:100%;
       height:100%;
-      
+
       padding:0px;
       font-size:10px;
 
@@ -322,7 +321,7 @@ section ul.tile{
 
     vertical-align:top;
     width:160px;
-   
+
     margin-right:20px;
 
     &.thumbnail_enabled{
